# pico-sdk-blink

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blink.cpp  blink.test.yaml  chip_sdk_import.cmake  diagram.json  wokwi.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: atividade-1.yml  atividade-2.yml  atividade-3.yml  atividade-4.yml  atividade1.yml  atividade2.yml  ci.yml
atividade-1/: CMakeLists.txt  README.md
atividade-1/src/: main.c
atividade-1/test/: diagram.json  scenario.yml  wokwi.toml
atividade-1/test/chip/: gpio.c  gpio.json  test.c  test.json
atividade-2/: CMakeLists.txt  README.md
atividade-2/src/: main.c  main.cpp
atividade-2/test/: scenario.yml  wokwi.toml
atividade-3/: CMakeLists.txt  README.md
atividade-3/src/: main.cpp
atividade-3/test/: diagram.json  scenario.yml  wokwi.toml
atividade-4/: CMakeLists.txt  README.md
atividade-4/src/: main.c
atividade-4/test/: scenario.yml  scenario2.yml  wokwi.toml
bulid/: CMakeCache.txt  Makefile  blink.dis  blink.elf  blink.elf.map  blink.hex  blink.uf2  cmake_install.cmake
bulid/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
bulid/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
bulid/pico-sdk/: Makefile  cmake_install.cmake
bulid/pico-sdk/docs/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2_common/boot_stage2/: Makefile  bs2_default.dis  bs2_default.elf.map  bs2_default_padded_checksummed.S  cmake_install.cmake
bulid/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2_common/hardware_claim/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
bulid/pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
bulid/pico-sdk/tools/: Makefile  cmake_install.cmake
bulid/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
(+102 files in other folders)
